--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -10,35 +10,50 @@ tweets: List[models.Tweet]
 	<fieldset>
 		<h2> Nouveau Tweet </h2>
 		<form method="post" action="/tweet/add">
-			<input type="text" name="label" placeholder="écrire un nouveau Tweet">
-			<input type="hidden" name="user_email" value="@utilisateur.email"> 
-			<button type="submit" class="btn">publier</button>
+				<table>
+					<tr>
+						<td colspan="2" align="center">
+						<textarea cols="50" rows="5" name="label" placeholder="écrire un nouveau Tweet"></textarea>
+						</td>
+					</tr>
+<!-- 					<tr> -->
+<!-- 						<td>Ajoute un sujet?</td> -->
+<!-- 						<td><input type="text" name="sujet"  placeholder="vous pouvez ajouter un sujet."></td> -->
+<!-- 					</tr> -->
+					<tr>
+						<td><input type="hidden" name="username" value="@utilisateur.username"> </td>
+						<td align="right" ><button type="submit" class="btn">publier</button></td>
+					</tr>	
+				</table>	
 		</form>
 	</fieldset>
 	<!-- Liste des Tweets -->
 	 <table class="table table-striped">
         
                 <tr>
-                        <td>nb Tweet</td>
-                        <td>ID</td>
                         <td>Date</td>
                         <td>Username</td>
                         <td>Tweet</td>
+                        <td>userTagé</td>
                 </tr>
                 
         @for((tweet, i) <- tweets.zipWithIndex.reverse) {
                 <tr>
-                        <td>@i</td>
-                        <td>@tweet.id</td>
                         <td>@tweet.creationDate</td>
                         <td>@tweet.user.username</td>
-                        <td>@tweet.label</td>
+                        @if(tweet.sujet!=""){
+                        <td>@Html((tweet.label).replace("\n","<br/>"))<a href="@routes.Sujets.affSujet(tweet.sujet)">#@tweet.sujet</a></td>
+                        }else{
+                        <td>@Html((tweet.label).replace("\n","<br/>"))</td>
+                        }
+                        <td>@tweet.Taguser</td>
                 </tr>
         }
         </table>
         
         Il y a au total @tweets.size tweets.
      <!-- message d'erreur si l'utilisateur ne respecte pas les contraintes faite sur le modele   -->
+      
     </ul> 
      @if(flash.containsKey("error")) {
         <div class="alert alert-error"> <!-- ceci est un style twitter bootstrap -->
